# test-wasm-ntrn

./: Cargo.toml
schema/: test-cosmwasm-ntrn.json  test_cosmwasm_ntrn.json
src/: contract.rs
