[package]
name = "test_cosmwasm_ntrn"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
cosmwasm-std = "2.1.0"
cw20-base = { version = "2.0.0", features = ["library"] }
